<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/my_style">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/healthy_helper"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/begin_button" />


</LinearLayout>