<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment"
    style="@style/my_style"
    android:layout_gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/healthy_helper"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.635"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/app_description"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/do_forecast"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.819"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/do_forecast"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="244dp"
                android:fontFamily="@font/roboto_mono"
                android:text="@string/begin_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>