<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentThree"
    style="@style/my_style"
    android:layout_gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintThree"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/q_3_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="190dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/q_3"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:backgroundTint="@color/select_edit_text"
            android:ems="10"
            android:hint="@string/q_3_edit_text"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColorHighlight="@color/select_edit_text"
            android:textColorLink="@color/select_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q_3_text" />

        <Button
            android:id="@+id/buttonNext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="176dp"
            android:text="@string/next_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>